{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0783739f-30d8-4e37-ad8e-a385adb89e2a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "86fbeb2b-123a-4dbe-978f-37b5076c26c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8144ec53-ed93-4931-aacb-67b067d6ef3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "8a14ed8a-2fc9-4255-b443-a08be0df931e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1cf91b83-30a2-422c-8588-ba91c911b561",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "0806a472-fcc9-4a5c-9f2a-51095780c2fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "7369a7dd-d1fa-4d23-8cc3-50d39a1f25d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d629a1d-0aa1-48e1-94f0-a18a664991ca",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7805b8d0-3312-407e-8beb-c9144d1c0342",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a6ce00e-852d-414c-af31-588fdcd4b01c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7a73e46-d018-4f41-a215-750f277b8b02",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1648f3dd-1616-408f-ba46-039acfe79bcf",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a149894-e0c4-402e-b0b5-c141964af5a1",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}